2003-07-04  Murray Cumming  <murrayc@usa.net>

	*  modulesets/gnome24.modules (meta-gnome-desktop): Replaced 
	meta-gnome-accessibilty dependency with gnopernicus+gok because 
	meta-gnome-accssibility contains extra stuff that is not part of
	GNOME 2.4.

2003-07-02  Andrew Sobala  <aes@gnome.org>

	* modulesets/gnome24.modules: added nautilus-cd-burner

2003-07-02  Andrew Sobala  <aes@gnome.org>

	* modulesets/gnome24.modules: fixed up GNOME 2.4 modules (Murray :P)

2003-07-01  Murray Cumming  <murrayc@usa.net>

	* modulesets/gnome24.modules:
	Added GNOME 2.4 new modules to meta-gnome-desktop dependencies,
	some implicitly through other modules. I put epiphany and gnomemeeting
	at the end because they are probably harder to build.
	Actually it fails after zenity so I hope someone can fix it.

2003-06-29 Mark Finlay <sisob@eircom.net>

	* modulesets/gnome24.modules:
	Adding the gstreamer version of totem.

2003-06-27  Matthias Clasen  <maclas@gmx.de>

	* module.py (BuildScript.build): Respect --no-interact.

	* jhbuild.py: Pass --no-interact down to build.build().

2003-06-25  Bill Haneman     <bill.haneman@gnome.org>

	* modulesets/gnome24.modules:
	Removed erroneous gnome-2-0-0 tag from gnome-mag
	module.

2003-06-11  Mark McLoughlin  <mark@skynet.ie>

	* jhbuild.py: add libdir to LD_LIBRARY_PATH when
	it contains libdir already, but not as the first
	in the list.
	
	* modulesets/gnome24.modules:
	libwnck depends on startup-notification.
	gnome-desktop doesn't depend on libwnck, but gnome-panel
	does.

2003-06-24  Ian McKellar  <yakk@yakk.net>

	* cvs.py:
	Fixed error reporting

2003-06-24  Anders Carlsson  <andersca@codefactory.se>

	* modulesets/gnome24.modules:
	Remove thinice, it's now in gnome-themes.
	
2003-06-21  Anders Carlsson  <andersca@codefactory.se>

	* modulesets/gnome24.modules: ORBit2 now depends
	on gnome-common.

2003-06-16  Murray Cumming  <murray@usa.net>

	* modulesets/gnome24.modules: meta-gnome-desktop: 