@@ -1,3 +1,13 @@
+2003-07-05  Marco Pesenti Gritti  <marco@it.gnome.org>
+
+	* module.py:
+
+	Add the ability to specify a mozilla branch.
+
+	* modulesets/gnome24.modules:
+
+	Use 1.4 mozilla branch.
+
 2003-07-04  Murray Cumming  <murrayc@usa.net>
 
 	*  modulesets/gnome24.modules (meta-gnome-desktop): Replaced 
